open modal form

--- a/katrin/src/contacts/contacts.scss
+++ b/katrin/src/contacts/contacts.scss
@@ -9,20 +9,20 @@
   text-align: center;
 }
 
-.footer-button {
-  display: flex;
-  justify-content: center;
-}
+// .footer-button {
+//   display: flex;
+//   justify-content: center;
+// }
 
-.footer-button__send {
-  color: #fff;
-  background: #000;
-  margin-top: 29px;
-  margin-bottom: 85px;
-  width: 180.5px;
-  height: 42px;
-  border-radius: 20px;
-}
+// .footer-button__send {
+//   color: #fff;
+//   background: #000;
+//   margin-top: 29px;
+//   margin-bottom: 85px;
+//   width: 180.5px;
+//   height: 42px;
+//   border-radius: 20px;
+// }
 
 .footer-social {
   /* width: 342px; */
